--- a/games/where/WhereInTheWorld.html
+++ b/games/where/WhereInTheWorld.html
@@ -40,8 +40,7 @@ Various *.jpg files
  body {background-color: rgb(255, 250, 240);;}
 	  
     </style>
-	<script src="js/ol.js">
-	</script>
+	<script src="<?php echo $CLIENT_ROOT; ?>/js/symb/ol.js" type="text/javascript"></script>
 	<script = javascript>
 	var parameters = location.search.substring(1);
 	if(parameters.substring(0,5) == "Debug")
